--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <section class="text">
                         <h3>Formação</h3>
                         <p>
-                            Atualmente estudante Bachalerado Interdiciplinar em Ciência e Tecnologia na Universidade Federal
+                            Atualmente estudante em Bachalerado Interdiciplinar em Ciência e Tecnologia na Universidade Federal
                             do Rio Grande do Norte(UFRN) e Bachalerado em Sistemas de Informação na Universidade Estácio de Sá.
                         </p>
                     </section>
@@ -117,8 +117,8 @@
                     <section class="text">
                         <h3>Hobbies</h3>
                         <p>
-                            Paixâo por leitura, sem pre vasculhando algo pra ler na internet.<br><br>
-                            Música, sempre um soundtrack tocando, seja pra, estudar ou relaxar.<br><br>
+                            Paixâo por leitura, sempre vasculhando algo pra ler na internet.<br><br>
+                            Música, sempre um soundtrack tocando, seja para, estudar ou relaxar.<br><br>
                             Jogar, sempre gostei de jogos e se tiver com amigos ainda mais.
                         </p>
                     </section>
@@ -133,8 +133,8 @@
                         <p>
                             A Eject oferece oportunidade para crescimento pessoal e profissional
                             que quero cultivar desde o inicio da faculdade para ter máximo proveito.
-                            O profissionalismo e as habilidades interpessoais minhas e do pessoal da
-                            empresa para ajudar a melhorar o crescimento de todos.
+                            Com o profissionalismo e as habilidades interpessoais, minhas e do pessoal da
+                            empresa, para ajudar a melhorar o crescimento de todos.
                         </p>
                     </section>
                 </div>
